--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 28 22:05:11 GMT 2009 Daniel P.Berrange <berrange@redhat.com>
+
+	* src/remote_internal.c: Fix typo, and tweak variable decl
+
 Wed Jan 28 21:55:11 GMT 2009 Daniel P.Berrange <berrange@redhat.com>
 
 	* src/remote_internal.c: Stop reading data off wire once
