* Makefile.maint: sync from coreutils

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Thu Jan 29 13:07:05 +0100 2009 Jim Meyering <meyering@redhat.com>
 
+	* Makefile.maint: sync from coreutils
+
+Thu Jan 29 13:07:05 +0100 2009 Jim Meyering <meyering@redhat.com>
+
 	prohibit new uses of VIR_ERR_NO_MEMORY
 	* Makefile.maint (sc_prohibit_VIR_ERR_NO_MEMORY): New rule.
 	* .x-sc_prohibit_VIR_ERR_NO_MEMORY: New file: exceptions.
