--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Jan 29 09:03:17 PST 2009 John Levon <john.levon@sun.com>
+
+	* src/xend_internal.c: correctly enable floppies for HVM guests.
+	Refuse to directly attach disks that won't work via
+	device_create.
+
 Thu Jan 29 16:41:07 GMT 2009 John Levon <john.levon@sun.com>
 
 	* src/util.c: allow strtol replacements for libvirt proxy
