--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Jan 29 19:05:00 +0100 2009 Jim Meyering <meyering@redhat.com>
+
+	maint: sync from coreutils
+	* .x-sc_prohibit_have_config_h: Renamed from...
+	* .x-sc_no_have_config_h: ... this.
+	* .x-sc_prohibit_HAVE_MBRTOWC: New file.
+
 Thu Jan 29 17:40:22 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Support VNC password setting for QEMU driver
