--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Fri Jan 30 15:34:42 GMT 2009 John Levon <john.levon@sun.com>
+
+	* src/libvirt.c: Fix yet another printf("%s", NULL) case
+
+	* src/util.c: Fix getpwuid_r() usage
+
+	* src/virsh.c: Fix virsh migrateuri handling
+
 Thu Jan 29 23:01:22 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Misc Xen driver crash/bug fixes
