--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jan 30 16:48:22 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/storage_conf.c: Fix leak of volume objects when free'ing
+	pool object
+
 Fri Jan 30 16:46:22 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/remote.c: Fix memory leak after sending a libvirt
