--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue, 3 Feb 2009 14:06:06 +0100 Jim Meyering <meyering@redhat.com>
+
+	syntax-check: enable more checks
+	* Makefile.cfg (local-checks-to-skip): Don't skip sc_m4_quote_check.
+	Don't skip sc_prohibit_nonreentrant.
+	* Makefile.nonreentrant (NON_REENTRANT): Comment out until we've
+	remove all remaining uses of strerror.
+
 Tue, 3 Feb 2009 14:06:05 +0100 Jim Meyering <meyering@redhat.com>
 
 	cleanup: remove useless if-before-VIR_FREE
