--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Tue, 3 Feb 2009 14:06:06 +0100 Jim Meyering <meyering@redhat.com>
 
+	avoid a format-related warning
+	* src/qemu_driver.c (qemudStartVMDaemon): Use "%s".
+
+Tue, 3 Feb 2009 14:06:06 +0100 Jim Meyering <meyering@redhat.com>
+
 	build: enable redundant-const check
 	* Makefile.cfg (local-checks-to-skip): Remove sc_redundant_const.
 	* src/lxc_controller.c: Remove redundant "const"(s).
