--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Thu, 5 Feb 2009 17:03:35 +0100 Jim Meyering <meyering@redhat.com>
+Thu Feb 5 17:03:35 +0100 2009 Jim Meyering <meyering@redhat.com>
 
 	qemu_driver.c: use virReportSystemError in place of some qemudLog uses
 	...thus eliminating many uses of strerror.
@@ -6,7 +6,7 @@ Thu, 5 Feb 2009 17:03:35 +0100 Jim Meyering <meyering@redhat.com>
 	and return -1 upon failure to open KVM_DEVICE.  Suggested by
 	Daniel P. Berrange.
 
-Thu, 5 Feb 2009 17:03:34 +0100 Jim Meyering <meyering@redhat.com>
+Thu Feb 5 17:03:34 +0100 2009 Jim Meyering <meyering@redhat.com>
 
 	publicize virStrerror
 	* src/virterror.c (virStrerror): Remove "static".
