--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Thu Feb 5 17:03:35 +0100 2009 Jim Meyering <meyering@redhat.com>
 
+	qemud.c: use virStrerror, not strerror
+
+Thu Feb 5 17:03:35 +0100 2009 Jim Meyering <meyering@redhat.com>
+
 	iptables.c: Use virStrerror, not strerror.
 	* src/iptables.c: Include "virterror_internal.h".
 	Use virStrerror, not strerror.
