report error for some xend operations on shutdown domain

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb  5 17:19:24 GMT 2009 John Levon <john.levon@sun.com>
+
+	* src/xend_internal.c: report error for some xend operations on
+	shutdown domain
+
 Thu Feb  5 16:53:37 GMT 2009 John Levon <john.levon@sun.com>
 
 	* src/xend_internal.c: robustify sexpr parser for NICs
