--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Fri Feb 13 19:03:30 IST 2009 Mark McLoughlin <markmc@redhat.com>
+
+	* qemud/qemud.c: fix gcc-4.4 warnings
+
+Fri Feb 13 19:03:25 IST 2009 Mark McLoughlin <markmc@redhat.com>
+
+	* src/bridge.c: fix gcc-4.4 warnings
+
 Fri Feb 13 16:50:35 GMT 2009 John Levon <john.levon@sun.com>
 
 	* src/xend_internal.c: xend in 3.3 grew a couple of new options
