Fix libvirt_proxy.c warnings from gcc-4.4
 libvirt_proxy.c: In function 'proxyReadClientSocket':
 libvirt_proxy.c:659: error: dereferencing pointer 'req' does break strict-aliasing rules
 libvirt_proxy.c:657: error: dereferencing pointer 'req' does break strict-aliasing rules
 libvirt_proxy.c:655: error: dereferencing pointer 'req' does break strict-aliasing rules
 ...

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Feb 13 19:03:42 IST 2009 Mark McLoughlin <markmc@redhat.com>
+
+	* proxy/libvirt_proxy.c: fix gcc-4.4 warnings
+
 Fri Feb 13 19:03:30 IST 2009 Mark McLoughlin <markmc@redhat.com>
 
 	* qemud/qemud.c: fix gcc-4.4 warnings
